--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.github.satyan:sugar:1.3'
     repositories{mavenCentral()}
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+    compile 'com.github.rey5137:material:1.1.1'
 }
