--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <meta-data
             android:name="DATABASE"
-            android:value="Item.db" />
+            android:value="Kumpra.db" />
         <meta-data
             android:name="VERSION"
             android:value="1" />
@@ -28,7 +28,7 @@
             android:value="com.android3project.dev.kumpra.Entities" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".View.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
