--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.github.clans:fab:1.5.3'
     compile 'com.afollestad:material-dialogs:0.7.6.0'
     compile 'com.github.satyan:sugar:1.3'
     repositories{mavenCentral()}
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
-    compile 'com.github.rey5137:material:1.1.1'
+    compile 'com.android.support:design:22.2.0'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    compile 'com.android.support:cardview-v7:22.2.0'
 }
